[package]
name = "arenabuddy_metagame"
authors.workspace = true
description = "MTGGoldfish metagame scraper and deck database"
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
arenabuddy_core = { path = "../core" }
arenabuddy_data = { path = "../data" }
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
