[package]
name = "arenabuddy_server"
description = "gRPC backend service for arenabuddy match data"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "arenabuddy_server"
path = "src/lib.rs"

[dependencies]
arenabuddy_core = { path = "../core/" }
arenabuddy_data = { path = "../data" }
arenabuddy_metagame = { path = "../metagame" }
base64 = { workspace = true }
chrono = { workspace = true }
google-sheets4 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracingx = { path = "../../lib/tracingx" }
uuid = { workspace = true }
yup-oauth2 = { workspace = true }

[features]
default = []
otel = ["tracingx/otel"]

[lints]
workspace = true
