[package]
name = "start"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
dioxus = { workspace = true}
tracing = { workspace = true }
tracingx = { path = "../tracingx" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = {workspace = true}

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
