[package]
name = "baseballref"
authors.workspace = true
description.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
clap = { workspace = true, features = ["env"] }
reqwest.workspace = true
rust_decimal.workspace = true
scraper.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
